# crm_data_etl_pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: test_imports.py
