[tool.poetry]
name = "crm-data-elt-pipeline"
version = "0.1.0"
description = "Data ETL pipeline for extracting and processing Freshsales CRM data"
authors = ["rashmi-carol-dsouza <hello@rashmidsouza.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
apache-airflow = "^2.10.3"
requests = "^2.32.3"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
